// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`colors-test no default colors can be applied to custom log levels 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [],
  "WARN" => Array [],
  "ERROR" => Array [],
  "POTATO" => Array [
    Array [
      "[1] [91mPOTATO test-context Custom log level[39m",
      "POTATO",
      "test-context",
    ],
  ],
}
`;

exports[`colors-test no default colors can be disabled 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [],
  "WARN" => Array [],
  "ERROR" => Array [
    Array [
      "[1] ERROR test-context no color",
      "ERROR",
      "test-context",
    ],
  ],
  "POTATO" => Array [],
}
`;

exports[`colors-test no default colors of various log levels work 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [
    Array [
      "[1] INFO test-context No color",
      "INFO",
      "test-context",
    ],
  ],
  "WARN" => Array [
    Array [
      "[2] [95mWARN test-context Single color[39m",
      "WARN",
      "test-context",
    ],
  ],
  "ERROR" => Array [
    Array [
      "[3] [94m[101mERROR test-context Multiple colors[49m[39m",
      "ERROR",
      "test-context",
    ],
  ],
  "POTATO" => Array [],
}
`;

exports[`colors-test transport can override colors specified colors are used 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [],
  "WARN" => Array [
    Array [
      "[1] [93mWARN test-context Yellow[39m",
      "WARN",
      "test-context",
    ],
  ],
  "ERROR" => Array [],
}
`;

exports[`colors-test with default default is used as a fallback 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [],
  "WARN" => Array [],
  "ERROR" => Array [
    Array [
      "[1] [91mERROR test-context Default color[39m",
      "ERROR",
      "test-context",
    ],
  ],
}
`;

exports[`colors-test with default specified colors are used 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [],
  "WARN" => Array [
    Array [
      "[1] [95mWARN test-context Specified color[39m",
      "WARN",
      "test-context",
    ],
  ],
  "ERROR" => Array [],
}
`;
